tests/suppress_traces/suppress_traces.exp
Error: traces.js:15
 15: var a: string = foo('hi'); // error number ~> string
                     ^^^^^^^^^ number. This type is incompatible with
 15: var a: string = foo('hi'); // error number ~> string
            ^^^^^^ string
Trace:
* path 1:
 15: var a: string = foo('hi'); // error number ~> string
                     ^^^^^^^^^ NumT [number]
 15: var a: string = foo('hi'); // error number ~> string
                     ^^^^^^^^^ ~> UseT(UnknownUse, OpenT) [call of function] (from path 2)
 15: var a: string = foo('hi'); // error number ~> string
         ^ ~> UseT(UnknownUse, OpenT) [`a`]
* path 2:
 15: var a: string = foo('hi'); // error number ~> string
                     ^^^^^^^^^ NumT [number]
 15: var a: string = foo('hi'); // error number ~> string
                     ^^^^^^^^^ ~> UseT(UnknownUse, OpenT) [return] (from path 3)
 15: var a: string = foo('hi'); // error number ~> string
                     ^^^^^^^^^ ~> UseT(UnknownUse, OpenT) [call of function] (from path 6)
 15: var a: string = foo('hi'); // error number ~> string
                     ^^^^^^^^^ ~> ReposLowerT [call of function]
* path 3:
 12:   return bar();
              ^^^^^ NumT [number]
 12:   return bar();
              ^^^^^ ~> UseT(UnknownUse, OpenT) [call of function] (from path 4)
 11: function foo(x: string) {
                            ^ ~> UseT(FunReturn, OpenT) [return]
 15: var a: string = foo('hi'); // error number ~> string
                     ^^^^^^^^^ ~> ReposLowerT [return] (from path 6)
* path 4:
 12:   return bar();
              ^^^ FunT [function]
 12:   return bar();
              ^^^ ~> UseT(UnknownUse, OpenT) [function] (from path 5)
 12:   return bar();
              ^^^^^ ~> CallT [call of function]
* path 5:
  9: function bar(): number { return 5; }
     ^^^^^^^^^^^^^^^^^^^^^^ FunT [function]
  9: function bar(): number { return 5; }
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ ~> UseT(UnknownUse, OpenT) [function]
 12:   return bar();
              ^^^ ~> ReposLowerT [function]
* path 6:
 15: var a: string = foo('hi'); // error number ~> string
                     ^^^ FunT [function]
 15: var a: string = foo('hi'); // error number ~> string
                     ^^^^^^^^^ ~> CallT [call of function]

Warning: traces.js:8
  8: // $FlowFixMe - Error unused suppression
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Error suppressing comment. Unused suppression


Found 1 error and 1 warning
